--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "jshint": "~2.4.4",
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.4",
+    "grunt-contrib-jshint": "~0.9.2"
   }
 }
