--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-express-server": "~0.4.13",
     "chai": "~1.9.1",
-    "supertest": "~0.10.0"
+    "supertest": "~0.10.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "debowerify": "~0.7.0",
+    "browserify": "~3.33.0",
+    "grunt-browserify": "~2.0.1",
+    "grunt-sass": "~0.11.0",
+    "grunt-mongoimport": "~0.1.2"
   }
 }
