--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mkdir -p build && grunt travis --trace --verbose"
   },
   "dependencies": {
     "express": "*",
